apriltag_stderr.log
Traceback (most recent call last):
Traceback (most recent call last):
  File "/Users/pennrobotics/Southmoon/init.py", line 38, in <module>
Traceback (most recent call last):
  File "/Users/pennrobotics/Southmoon/init.py", line 38, in <module>
  File "/Users/pennrobotics/Southmoon/init.py", line 38, in <module>
    local_config_source.update(config)
    local_config_source.update(config)
    local_config_source.update(config)
  File "/Users/pennrobotics/Southmoon/config/ConfigSource.py", line 29, in update
  File "/Users/pennrobotics/Southmoon/config/ConfigSource.py", line 29, in update
  File "/Users/pennrobotics/Southmoon/config/ConfigSource.py", line 29, in update
    with open(self._config_filename, "r") as config_file:
    with open(self._config_filename, "r") as config_file:
    with open(self._config_filename, "r") as config_file:
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
FileNotFoundError: [Errno 2] No such file or directory: '/Users/pennrobotics/Southmoon/setup/config_extraFrontCam.json'
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
FileNotFoundError: [Errno 2] No such file or directory: '/Users/pennrobotics/Southmoon/setup/config_backCam.json'
FileNotFoundError: [Errno 2] No such file or directory: '/Users/pennrobotics/Southmoon/setup/config_rightCam.json'
Traceback (most recent call last):
  File "/Users/pennrobotics/Southmoon/init.py", line 38, in <module>
    local_config_source.update(config)
  File "/Users/pennrobotics/Southmoon/config/ConfigSource.py", line 44, in update
    camera_matrix = calibration_store.getNode("camera_matrix").mat()
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
cv2.error: OpenCV(4.10.0) /Users/xperience/GHA-Actions-OpenCV/_work/opencv-python/opencv-python/opencv/modules/core/src/persistence.cpp:2171: error: (-215:Assertion failed) isMap() in function 'operator[]'

